[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytheus"
dynamic = ["version"]
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["rich", "typer", "pandas", "requests"]
license = {file = "LICENSE"}
description = "pytheus is a hacky CLI tool for get data from prometheus."


[project.scripts]
pytheus = "pytheus:app"


[tool.setuptools_scm]
